--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,6 +1,6 @@
-name: godot-4-0
+name: godot-3-5
 base: core22
-version: 4.0-beta8
+version: 3.5.1
 summary: The game engine you've been waiting for.
 description: |
   The Godot Engine is a free, all-in-one, cross-platform game engine that makes it easy for you to create 2D and 3D games.
@@ -13,9 +13,14 @@ architectures:
 compression: lzo
 
 parts:
-  godot-4-0:
+  dotnet:
+    plugin: nil
+    stage-packages:
+      - dotnet-sdk-6.0
+      - dotnet-runtime-6.0
+  godot-3-5:
     plugin: dump
-    source: https://downloads.tuxfamily.org/godotengine/4.0/beta8/mono/Godot_v$SNAPCRAFT_PROJECT_VERSION_mono_linux_x86_64.zip
+    source: https://downloads.tuxfamily.org/godotengine/$SNAPCRAFT_PROJECT_VERSION/mono/Godot_v$SNAPCRAFT_PROJECT_VERSION-stable_mono_x11_64.zip
     override-build: |
       craftctl default
       mv Godot* tmp/
@@ -30,7 +35,7 @@ parts:
       cp * $CRAFT_PART_INSTALL/meta/gui
 
   cleanup:
-    after: [ godot-4-0 ]
+    after: [ godot-3-5 ]
     plugin: nil
     build-snaps: [ gnome-42-2204 ]
     override-prime: |
@@ -39,10 +44,10 @@ parts:
         find . -type f,l -exec rm -f $SNAPCRAFT_PRIME/{} \;
 
 apps:
-  godot-4-0:
+  godot-3-5:
     extensions: [gnome]
-    command: Godot_v$SNAPCRAFT_PROJECT_VERSION_mono_linux.x86_64
-    desktop: meta/gui/godot-4-0.desktop
+    command: Godot_v$SNAPCRAFT_PROJECT_VERSION-stable_mono_x11.64
+    desktop: meta/gui/godot-3-5.desktop
     plugs:
       - home
       - network
