--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,6 +1,6 @@
 name: godot-4-0
 base: core22
-version: 4.0-beta9
+version: '4.0'
 summary: The game engine you've been waiting for.
 description: |
   The Godot Engine is a free, all-in-one, cross-platform game engine that makes it easy for you to create 2D and 3D games.
@@ -46,10 +46,12 @@ parts:
   libs:
     plugin: nil
     stage-packages:
+      - libspeechd2
       - mesa-va-drivers
       - mesa-vulkan-drivers
       - vulkan-tools
     prime:
+      - usr/lib/*/libspeech*
       - usr/lib/*/dri
       - usr/lib/*/libVk*
       - usr/lib/*/libvulkan*
@@ -59,7 +61,7 @@ parts:
 
   godot-4-0:
     plugin: dump
-    source: https://downloads.tuxfamily.org/godotengine/4.0/beta9/mono/Godot_v$SNAPCRAFT_PROJECT_VERSION_mono_linux_x86_64.zip
+    source: https://downloads.tuxfamily.org/godotengine/4.0/mono/Godot_v$SNAPCRAFT_PROJECT_VERSION-stable_mono_linux_x86_64.zip
     override-build: |
       craftctl default
       mv Godot* tmp/
@@ -85,7 +87,7 @@ parts:
 apps:
   godot-4-0:
     extensions: [gnome]
-    command: Godot_v$SNAPCRAFT_PROJECT_VERSION_mono_linux.x86_64
+    command: Godot_v$SNAPCRAFT_PROJECT_VERSION-stable_mono_linux.x86_64
     desktop: meta/gui/godot-4-0.desktop
     plugs:
       - home
