--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,6 +1,6 @@
 name: godot-4
 base: core22
-version: '4.0'
+version: '4.1'
 summary: The game engine you've been waiting for.
 description: |
   The Godot Engine is a free, all-in-one, cross-platform game engine that makes it easy for you to create 2D and 3D games.
@@ -61,7 +61,7 @@ parts:
 
   godot-4:
     plugin: dump
-    source: https://downloads.tuxfamily.org/godotengine/4.0/mono/Godot_v$SNAPCRAFT_PROJECT_VERSION-stable_mono_linux_x86_64.zip
+    source: https://github.com/godotengine/godot/releases/download/$SNAPCRAFT_PROJECT_VERSION-stable/Godot_v$SNAPCRAFT_PROJECT_VERSION-stable_mono_linux_x86_64.zip
     override-build: |
       craftctl default
       mv Godot* tmp/
